--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@types/googlemaps": "^3.37.0",
+    "ahocorasick": "^1.0.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "d3": "^5.11.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
