--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "rxjs": "~6.4.0",
+    "socket.io": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
