--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@types/googlemaps": "^3.37.0",
     "ahocorasick": "^1.0.2",
     "bcrypt": "^3.0.6",
+    "bloom-filters": "^0.7.0",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "count-min-sketch": "^0.1.1",
     "d3": "^5.11.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
